crates/conduit-derive/tests/compile_fail/command_self_param.rs
use conduit_derive::command;

struct MyHandler;

impl MyHandler {
    #[command]
    fn method_handler(&self) -> Vec<u8> {
        vec![]
    }
}

fn main() {}
